[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-toolkit-pro"
version = "1.0.0"
description = "Professional PDF manipulation toolkit for automation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["pdf", "automation", "cli", "tools", "merge", "split"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "pypdf>=4.0.0",
    "click>=8.0.0",
    "Pillow>=10.0.0",
    "tqdm>=4.60.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
]
ocr = [
    "pytesseract>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pdf-toolkit-pro"
Documentation = "https://github.com/yourusername/pdf-toolkit-pro#readme"
Repository = "https://github.com/yourusername/pdf-toolkit-pro"
"Bug Tracker" = "https://github.com/yourusername/pdf-toolkit-pro/issues"

[project.scripts]
pdf-toolkit = "pdf_toolkit.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.coverage.run]
source = ["pdf_toolkit"]
omit = ["*/tests/*"]
